Enhance SM01693 component by adjusting table header styling for better layout; update CSS for print handling

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 
 :root {
     --font-sans: 'Bahnschrift';
+    print-color-adjust: exact;
+
 }
 
 
@@ -11,6 +13,7 @@ table th {
 }
 
 @media print {
+
     @page {
         margin: 0;
     }
