feat: Enhance SM01694, SM01695, and SM01696 components with new features and improvements
- Updated SM01694 to include additional medications and units, adjusted table structure, and improved input handling.
- Modified SM01695 to initialize weight and height from form data, changed input types to radio for certain questions, and improved layout for vital signs.
- Enhanced SM01696 by adding a comprehensive list of allergies, refining the allergy and reaction input sections, and improving the overall layout and choices for user inputs.
- Updated QuestionWithChoices component to support radio button type for better user experience.
- Improved CSS styles for better input handling and visual consistency across components.

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 
 }
 
-
 table td,
 table th {
     @apply p-1 border;
@@ -21,6 +20,7 @@ table th {
     * {
         print-color-adjust: exact;
     }
+
 
     @page {
         margin: 0;
@@ -52,7 +52,7 @@ input {
 }
 
 select {
-    @apply focus:bg-violet-100 p-0.5 border border-gray-400 rounded max-w-fit;
+    @apply focus:bg-violet-100 px-1 border border-gray-400 rounded appearance-none;
 }
 
 
@@ -62,4 +62,15 @@ textarea {
 
 button {
     @apply h-4;
+}
+
+/* Hide the time picker icon in input[type="time"] */
+input[type="time"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
+
+/* For Firefox */
+input[type="time"] {
+    -moz-appearance: textfield;
 }
