--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ input {
 }
 
 select {
-    @apply focus:bg-violet-100 px-1 border border-gray-400 rounded appearance-none;
+    @apply focus:bg-violet-100 px-1 border border-gray-400 rounded;
 }
 
 
