--- a/src/index.css
+++ b/src/index.css
@@ -27,19 +27,12 @@ table th {
     margin: 0;
   }
 
-  body * {
-    visibility: hidden;
+  aside {
+    display: none;
   }
 
-  .printable,
-  .printable * {
-    visibility: visible;
-  }
-
-  .printable {
-    /* position: absolute; */
-    /* top: 0; */
-    /* left: 0; */
+  main {
+    overflow: unset;
   }
 }
 
@@ -61,10 +54,6 @@ select {
 
 textarea {
   @apply focus:bg-violet-100 px-2 py-1 border border-gray-400 rounded h-40 resize-none;
-}
-
-button {
-  @apply h-4;
 }
 
 /* Hide the time picker icon in input[type="time"] */
