--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ input {
 }
 
 select {
-  @apply focus:bg-violet-100 px-0.5 border border-gray-400 rounded text-center;
+  @apply focus:bg-violet-100 px-0.5 border border-gray-400 rounded;
 }
 
 textarea {
