--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ select {
 }
 
 textarea {
-  @apply focus:bg-violet-100 px-2 py-1 border border-gray-400 rounded h-40 resize-none;
+  @apply focus:bg-violet-100 px-2 py-1 border border-gray-400 rounded resize-none;
 }
 
 /* Hide the time picker icon in input[type="time"] */
